[gd_scene load_steps=17 format=3 uid="uid://cib4cf4xqwdwl"]

[ext_resource type="Script" path="res://scenes/Enemies/basic_enemy.gd" id="1_ohb5k"]
[ext_resource type="Texture2D" uid="uid://wp5t5tyxt87u" path="res://assets/basic_enemy.png" id="1_qgdoe"]
[ext_resource type="Script" path="res://scripts/state_machine/node_state_machine.gd" id="2_231w8"]
[ext_resource type="Script" path="res://scenes/Enemies/idle_state.gd" id="3_238q8"]
[ext_resource type="PackedScene" uid="uid://do88igja7lo2g" path="res://scenes/components/hurt_component.tscn" id="4_d3g6h"]
[ext_resource type="Script" path="res://scenes/Enemies/attack_state.gd" id="5_aht63"]
[ext_resource type="Script" path="res://scenes/Enemies/chase_state.gd" id="6_1vcx0"]
[ext_resource type="PackedScene" uid="uid://d4ehve8tkntur" path="res://scenes/components/hit_component.tscn" id="7_ubwvg"]
[ext_resource type="PackedScene" path="res://scenes/components/chase_component.tscn" id="7_yjwt8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m7b0g"]
atlas = ExtResource("1_qgdoe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp1y3"]
atlas = ExtResource("1_qgdoe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_taykq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7b0g")
}],
"loop": true,
"name": &"enemy_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp1y3")
}],
"loop": true,
"name": &"enemy_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pt1ad"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8lc4q"]
radius = 79.0253

[sub_resource type="CircleShape2D" id="CircleShape2D_kh7l8"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43hh8"]
size = Vector2(24, 30)

[node name="BasicEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_ohb5k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_taykq")
animation = &"enemy_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_pt1ad")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("2_231w8")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_238q8")
enemy = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "hit_component_collision_shape")]
script = ExtResource("5_aht63")
enemy = NodePath("../..")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")
attack_cooldown = 0.5

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_1vcx0")
enemy = NodePath("../..")

[node name="ChaseComponent" parent="." instance=ExtResource("7_yjwt8")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseComponent"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_8lc4q")

[node name="HitComponent" parent="." instance=ExtResource("7_ubwvg")]
collision_layer = 4
collision_mask = 2

[node name="HitComponentCollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_kh7l8")
debug_color = Color(0.828911, 0.206107, 0.349316, 0.42)

[node name="HurtComponent" parent="." instance=ExtResource("4_d3g6h")]
collision_layer = 4
collision_mask = 2

[node name="HurtComponentCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-2, -15)
shape = SubResource("RectangleShape2D_43hh8")
debug_color = Color(0.782187, 0.435497, 0, 0.42)

[connection signal="body_entered" from="ChaseComponent" to="ChaseComponent" method="_on_body_entered"]
[connection signal="body_exited" from="ChaseComponent" to="ChaseComponent" method="_on_body_exited"]
